# cc-ddd

./: .gitignore  README.md  package.json  pyproject.toml
remotion-project/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion-project/manim-animations/: debugging_duck.py  main.py  pyproject.toml
remotion-project/src/: CodingEnvironment.tsx  Composition.tsx  EnhancedComposition.tsx  FinalComposition.tsx  Programmer.tsx  Root.tsx
scripts/: claude_code_tips.ts
