[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-demo-manim"
version = "0.1.0"
description = "Manim animations for debugging duck video demo"
dependencies = [
    "manim>=0.18.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "matplotlib",
]

[tool.uv.workspace]
members = [
    "remotion-project/manim-animations",
]
